Fix path issues on windows